# badger

./: .coveragerc  .gitignore  .gitreview  CONTRIBUTING.rst  HACKING.rst  README.rst  requirements.txt  setup.cfg
badger/: __init__.py  badge.py  barcode.py  opts.py  snowcamp2016.svg.jinja2
badger/cmd/: __init__.py  lastminute.py
badger/tests/: test_badger.py
badger/yurplan/: api.py  csv_loader.py
doc/source/: conf.py  index.rst  installation.rst  usage.rst
etc/: badger.conf  snowcamp2016.svg.jinja2  snowcamp2016.svg.jinja2.0  snowcamp2017.yaml
