[metadata]
name = badger
summary = Badges for Snowcamp
description-file =
    README.rst
author = SnowCamp
author-email = contact@snowcamp.io
home-page = http://snowcamp.io/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    badger

[entry_points]
console_scripts =
    badger=badger.cmd:main
    lastminute=badger.cmd.lastminute:main

oslo.config.opts =
    badger = badger.opts:list_opts

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = badger/locale
domain = badger

[update_catalog]
domain = badger
output_dir = badger/locale
input_file = badger/locale/badger.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = badger/locale/badger.pot
